--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "test-headed-chrome": "cypress run --browser chrome --headed",
+    "test-headless-chrome": "cypress run --browser chrome --headless",
+    "test-headed-edge": "cypress run --browser edge --headed",
+    "test-headless-edge": "cypress run --browser edge --headless"
   },
   "keywords": [],
   "author": "",
